@startuml 01-di-ext
namespace backend {
  class Client {
    - backend Storer
    + Insert(k string, v string) error
    + FindByID(k string) (string, error)

  }
  class LevelDB {
    - mdb *memdb.DB
    + Put(k []byte, v []byte) error
    + Get(k []byte) ([]byte, error)
    + Last() bool
	  + Next() ([]byte, []byte)
	  + HasNext() bool
    + Peek()([]byte, []byte)
  }
  interface Storer  {
    + Put(k []byte, v []byte) error
    + Get(k []byte) ([]byte, error)
    + First() bool
	  + Last() bool
	  + Next() ([]byte, []byte)
	  + HasNext() bool
    + Peek()([]byte, []byte)
  }
}
namespace backend_test {
  class TestBackend  {
    - kv map[string][]byte
    + Put(k []byte, v []byte) error
    + Get(k []byte) ([]byte, error)
  }
}

backend.Client --> backend.Storer : uses
backend.Storer <|-- backend.LevelDB : implements
backend.Storer <|-- backend_test.TestBackend : does not implement anymore

@enduml
